--- a/Es6/index.html
+++ b/Es6/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Bangladesh</h1>
     <!-- <script src="constlet.js"></script> -->
-    <script src="fucntiondefault.js"></script>
+    <!-- <script src="fucntiondefault.js"></script> -->
+    <script src="string.js"></script>
 </body>
 </html>
