--- a/Es6/index.html
+++ b/Es6/index.html
@@ -10,6 +10,7 @@
     <h1>Bangladesh</h1>
     <!-- <script src="constlet.js"></script> -->
     <!-- <script src="fucntiondefault.js"></script> -->
-    <script src="string.js"></script>
+    <!-- <script src="string.js"></script> -->
+    <script src="arrow.js"></script>
 </body>
 </html>
