--- a/Es6/index.html
+++ b/Es6/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="constlet.js"></script> -->
     <!-- <script src="fucntiondefault.js"></script> -->
     <!-- <script src="string.js"></script> -->
-    <script src="arrow.js"></script>
+    <!-- <script src="arrow.js"></script> -->
+    <script src="sperd.js"></script>
 </body>
 </html>
