--- a/Es6/index.html
+++ b/Es6/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="fucntiondefault.js"></script> -->
     <!-- <script src="string.js"></script> -->
     <!-- <script src="arrow.js"></script> -->
-    <script src="sperd.js"></script>
+    <!-- <script src="sperd.js"></script> -->
+    <script src="class.js"></script>
 </body>
 </html>
